--- a/jobs/initial_data/designs/0001_design.yaml.j2
+++ b/jobs/initial_data/designs/0001_design.yaml.j2
@@ -1,4 +1,4 @@
 ---
 manufacturers:
-  - "!create_or_update:name": "Juniper"
+  - "!create_or_update:nameSOMETRASH": "Juniper"
   - "!create_or_update:name": "Cisco"
